<resources>
    <string name="app_name">MyCalculator</string>
    <string name="Clear">Clear</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="division">/</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="multiplication">*</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="minus">-</string>
    <string name="_0">0</string>
    <string name="comma">,</string>
    <string name="plus">+</string>
    <string name="quil">=</string>
    <string name="sqrt">√</string>
    <string name="degree">^</string>
    <string name="inv">inv</string>
    <string name="rad">rad</string>
    <string name="percent">%</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="ln">ln</string>
    <string name="log">log</string>
    <string name="pi">pi</string>
    <string name="e">e</string>
    <string name="leftBrake">(</string>
    <string name="rightBrake">)</string>
    <string name="inversion">!</string>
</resources>